Migrate to ME.Client 1.0.0

--- a/appsettings.format.json
+++ b/appsettings.format.json
@@ -14,11 +14,13 @@
   "Jwt": {
     "Secret": "${JwtTokenSecret}"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+  "Serilog": {
+    "minimumLevel": {
+      "default": "Debug",
+      "override": {
+        "Microsoft": "Debug",
+        "System": "Debug"
+      }
     }
   }
 }
