--- a/.github/workflows/release-service.yml
+++ b/.github/workflows/release-service.yml
@@ -16,17 +16,13 @@ jobs:
       with:
         dotnet-version: 3.1.100
     - name: Build
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Release /p:AssemblyVersion=${GITHUB_REF#refs/tags/service-}
     - name: Test
       run: dotnet test --no-build --configuration Release
     - name: Publish API
-      run: dotnet publish --no-build ./src/OrderBooks/OrderBooks.csproj --output ./publish-api --configuration Release /p:AssemblyVersion=${GITHUB_REF#refs/tags/service-}
-    - name: Publish worker
-      run: dotnet publish --no-build ./src/OrderBooks.Worker/OrderBooks.Worker.csproj --output ./publish-worker --configuration Release /p:AssemblyVersion=${GITHUB_REF#refs/tags/service-}
+      run: dotnet publish --no-build ./src/OrderBooks/OrderBooks.csproj --output ./publish-api --configuration Release 
     - name: Check API dir
       run: ls ./publish-api
-    - name: Check worker dir
-      run: ls ./publish-worker
     - name: Publish API to Registry
       uses: swisschain/Publish-Docker-Github-Action@master
       with:
@@ -37,13 +33,3 @@ jobs:
         # snapshot: true # use snapshot to push an additional image, which is tagged with {YEAR}{MONTH}{DAY}{HOUR}{MINUTE}{SECOND}{first 6 digits of the git sha}
         tag_names: true  
         tag_name_skip: service-    
-    - name: Publish worker to Registry
-      uses: swisschain/Publish-Docker-Github-Action@master
-      with:
-        name: swisschains/exchange-order-books-worker
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        workdir: ./publish-worker
-        # snapshot: true # use snapshot to push an additional image, which is tagged with {YEAR}{MONTH}{DAY}{HOUR}{MINUTE}{SECOND}{first 6 digits of the git sha}
-        tag_names: true  
-        tag_name_skip: service-
